# FastAPI-app

./: README.md  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  product.py
users/: crud.py  schemas.py  views.py
