[tool.poetry]
name = "apip"
version = "0.1.0"
description = ""
authors = ["mttesla <fincher0307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pytest = "^8.2.2"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
